<resources>
    <string name="app_name">FindAPlant</string>
    <string name="action_account">View account</string>
    <string name="exit_activity">Exit</string>
    <string name="photograph_plant">Photograph your plant</string>
    <string name="title_activity_maps">BasicPlantMap</string>
    <string name="message_activity_maps">Thanks for contributing!</string>
    <string name="report_plant_placeholder">The stuff for reporting a sighting will go here!</string>
    <string name="no_permissions">This app needs access to your device camera and storage to continue! You may enter location manually or share your current location.</string>
    <string name="enable_permissions">Click here to enable permissions</string>
    <string name="what_plant">What plant is this?</string>
    <string name="user_input_plant">Enter plant name…</string>
    <string name="user_input_location">Enter location…</string>
    <string name="not_sure_plant">Help me identify this!</string>
    <string name="plant_description">Add description (optional)</string>
    <string name="user_input_desc">Enter additional information…</string>
    <string name="report_plant">Report Plant!</string>
    <string name="description_plant">Description</string>
    <string name="blank_plant_name">Error: You must enter the name of the plant to continue!</string>
    <string name="blank_plant_image">Error: You must take a picture of the plant to continue!</string>
    <string name="mlkit_failed">Error: Sorry, the plant could not be identified! Try with another image.</string>
    <string name="title_activity_registraton">RegistratonActivity</string>
    <string name="main_report_a_plant">Report A Plant</string>
    <string name="main_search_a_plant">Search for Plants</string>
    <string name="main_description">Description</string>
    <string name="search_by_plant">Search By Plant!</string>
    <string name="find_locations">Find Locations!</string>
    <string name="back_to_map">Return to Map</string>
    <string name="back_to_main">Return to Home</string>
    <string name="search_report_another">Find Or Report Another Plant?</string>
    <string name="mlkit_results">Potential Labels: %1s</string>
    <string name="ok">OK</string>
    <string name="register_instead">New here? Register Now!</string>
    <string name="login_instead">Already registered? Log in</string>
    <string name="find_plant_on_map">Find Plant On Map</string>
    <string name="enter_latitude">Plant latitude:</string>
    <string name="enter_longitude">Plant longitude:</string>
    <string name="example_latitude">Ex: 38.9859</string>
    <string name="example_longitude">Ex: -76.9386</string>
    <string name="invalid_lat_and_long">Error: Invalid latitude and longitude values!</string>
    <string name="invalid_lat">Error: Invalid latitude value!</string>
    <string name="invalid_long">Error: Invalid longitude value!</string>
    <string name="search_by_locations">Find Plants By Location</string>

</resources>
