<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#66EDD892">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/reportImageView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_camera_alt"
        android:onClick="imageViewOnClick">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/whatPlantText"
        app:layout_constraintTop_toBottomOf="@id/reportImageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="12pt"
        android:fontFamily='sans-serif-condensed'
        android:text="@string/what_plant">
    </TextView>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reportPlantEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whatPlantText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionNext"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="8pt"
        android:hint="@string/user_input_plant">
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whatPlantText"
        android:id="@+id/helpIdentifyButton"
        android:background="@drawable/button_rounded_corners"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="8pt"
        android:textAllCaps="false"
        android:text="@string/not_sure_plant"
        android:onClick="helpIdentifyOnClick">
    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/plantDescText"
        app:layout_constraintTop_toBottomOf="@id/helpIdentifyButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="12pt"
        android:fontFamily='sans-serif-condensed'
        android:text="@string/plant_description">
    </TextView>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:id="@+id/reportDescEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plantDescText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="8pt"
        android:hint="@string/user_input_desc">
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportDescEditText"
        android:id="@+id/reportPlantButton"
        android:background="@drawable/button_rounded_corners"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="8pt"
        android:textAllCaps="false"
        android:text="@string/report_plant"
        android:onClick="reportPlantOnClick">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>