<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#66EDD892">

   <TextView
       android:id="@+id/searchPlant"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintVertical_bias="0.2"
       android:text="@string/main_search_a_plant"
       android:textSize="14pt"
       android:gravity="center"
       android:fontFamily='sans-serif-condensed'
       android:textColor="#000000">
   </TextView>

    <EditText
        android:id="@+id/plant_search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchPlant"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="10pt"
        android:hint="@string/user_input_plant">
    </EditText>

    <Button
        android:id="@+id/plant_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_search_text"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_corners"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="8pt"
        android:textColor="#000000"
        android:textAllCaps="false"
        android:text="@string/search_by_plant">
    </Button>

    <EditText
        android:id="@+id/location_search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plant_search_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="10pt"
        android:hint="@string/user_input_location">
    </EditText>

    <Spinner
        android:id="@+id/address_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_search_text">

    </Spinner>

    <Button
        android:id="@+id/location_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_spinner"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_corners"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="8pt"
        android:textColor="#000000"
        android:textAllCaps="false"
        android:text="@string/search_by_location">
    </Button>

    <Button
        android:id="@+id/backToMainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_search_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_corners"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="8pt"
        android:textColor="#000000"
        android:textAllCaps="false"
        android:text="@string/back_to_main">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>